--- a/EXERCICIOS/ex023/index.html
+++ b/EXERCICIOS/ex023/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividades do Exercicio 22</title>
+    <title>Atividades do Exercicio 23</title>
 
 
 </head>
 <body>
-    <h1>Atividades do Exercicio 22</h1>
+    <h1>Atividades do Exercicio 23</h1>
 
-    <h2><a href="fundo001.html">Fundo 01</a></h2>
-    <h2><a href="fundo002.html">Fundo 02</a></h2>
-    <h2><a href="fundo003.html">Fundo 03</a></h2>
-    <h2><a href="fundo004.html">Fundo 04</a></h2>
-    <h2><a href="fundo005.html">Fundo 05</a></h2>
-    <h2><a href="fundo006.html">Fundo 06</a></h2>
-    <h2><a href="fundo007.html">Fundo 07</a></h2>
+    <h2><a href="tabela001.html">tabela 01</a></h2>
+    <h2><a href="tabela002.html">tabela 02</a></h2>
+    <h2><a href="tabela003.html">tabela 03</a></h2>
+    <h2><a href="tabela004.html">tabela 04</a></h2>
+    <h2><a href="tabela005.html">tabela 05</a></h2>
+    <h2><a href="tabela006.html">tabela 06</a></h2>
 </body>
 </html>
