--- a/EXERCICIOS/ex025/index.html
+++ b/EXERCICIOS/ex025/index.html
@@ -14,7 +14,9 @@
     <h2><a href="form001.html">Form 01</a></h2>
     <h2><a href="form002.html">Form 02</a></h2>
     <h2><a href="form003.html">Form 03</a></h2>
-
+    <h2><a href="form004.html">Form 04</a></h2>
+    <h2><a href="form005.html">Form 05</a></h2>
+    <h2><a href="form006.html">Form 06</a></h2>
 
 </body>
 </html>
