--- a/EXERCICIOS/ex025/form004.html
+++ b/EXERCICIOS/ex025/form004.html
@@ -10,8 +10,28 @@
     <h1>Teste de Formulários</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
 
-        <label for="iemail">E-mail:</label>
-        <input type="email" name="email" id="iemail" autocomplete="email">
+        <fieldset>
+            <legend>Dados Pessoais</legend>
+            <p>
+                <label for="inome">Nome:</label>
+                <input type="text" name="nome"id="iname" minlength="5" maxlength="25" required>
+            </p>
+            <p>
+                <label for="iemail">E-mail:</label>
+                <input type="email" name="email" id="iemail" autocomplete="email" required>
+            </p>
+            <p>
+                <label for="itel">Telefone:</label>
+                <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^\(\d{2}\)\d{4,5}-\d{4,5}$" placeholder="(xx)xxxx-xxxx" required>
+            </p>
+        </fieldset>
+        <!-- Estudar mais sobre RegEx-->
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
+
+        
 
     </form>
 </body>
