--- a/EXERCICIOS/ex025/index.html
+++ b/EXERCICIOS/ex025/index.html
@@ -17,6 +17,10 @@
     <h2><a href="form004.html">Form 04</a></h2>
     <h2><a href="form005.html">Form 05</a></h2>
     <h2><a href="form006.html">Form 06</a></h2>
+    <h2><a href="form007.html">Form 07</a></h2>
+    <h2><a href="form008.html">Form 08</a></h2>
+    <h2><a href="form009.html">Form 09</a></h2>
+    <h2><a href="form010.html">Form 10</a></h2>
 
 </body>
 </html>
